--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
   </style>
 </head>
 <body>
-
   <main>
-
     <div class="card_user">
       <div class="card_user__name">
         <img src="images/image-jeremy.png" alt="">
@@ -32,14 +30,11 @@
         <span id="monthly">Monthly</span> 
       </div>
     </div>
-
-    
-
   </main>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/StzaryC/Time-tracking-dashboard.git">Gustavo Park</a>.
   </div>
   <script src="main.js"></script>
 </body>
